Bug 301303 - dynamic playlist controls not using KColorScheme properly
Summary: dynamic playlist controls not using KColorScheme properly
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.5.90 (2.6 beta)
Platform: Ubuntu Linux
: HI normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords: release_blocker
: 304043 304749 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-06 19:20 UTC by Harald Sitter
Modified: 2012-08-08 20:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:
myriam: Usability+


Attachments
screenshot of the problem (191.61 KB, image/png)
2012-06-06 19:21 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2012-06-06 19:20:46 UTC
using the color scheme obsidian coast the new playlist controls fail to follow the scheme leading to near to unreadable text

Reproducible: Always

Steps to Reproduce:
1. switch to obsidian coast color scheme in kde
2.
3.
Actual Results:  
various amarok parts not following color scheme, looking weird and making text somewhat unreadable

Expected Results:  
amarok follows kde color scheme by using KColorScheme to make color decision rather than hardcoding
Comment 1 Harald Sitter 2012-06-06 19:21:07 UTC
Created attachment 71626 [details]
screenshot of the problem
Comment 2 Myriam Schweingruber 2012-06-07 04:30:30 UTC
Hm, which are the parts not readable? Since those are probably not visible in your screenshot it might be useful to point those more specifically with a comparison in the default Oxygen theme
Comment 3 Harald Sitter 2012-06-07 11:24:12 UTC
To the right hand side above the playlist there is "Dynamic Mode Enabled. Repopulate | Turn off" in a blue that has terrible contrast to the background. Looking through the color scheme's color  I cannot find the color the background uses.
Comment 4 Myriam Schweingruber 2012-06-07 11:30:06 UTC
Oh my, I would never have seen that without you pointing to it.
Comment 5 Matěj Laitl 2012-06-09 13:29:37 UTC
Git commit e17bd07d9e209e0511b136be1f5c31516a558764 by Matěj Laitl.
Committed on 09/06/2012 at 15:17.
Pushed by laitl into branch 'master'.

Use proper color in "Dynamic Playlist" notification strip

...it was not using style's link colour, from QPalette documentation:
> Note that we do not use the Link and LinkVisited roles when rendering
> rich text in Qt, and that we recommend that you use CSS

I didn't know this.

This should fix low-contrast problem with Obsidian Coast color scheme
and the like. It is still not optimal, but that would require
rethinking PaletteHandler::highlightColor().
FIXED-IN: 2.6

M  +1    -0    ChangeLog
M  +5    -3    src/playlist/PlaylistDock.cpp

http://commits.kde.org/amarok/e17bd07d9e209e0511b136be1f5c31516a558764
Comment 6 Myriam Schweingruber 2012-07-25 08:29:29 UTC
*** Bug 304043 has been marked as a duplicate of this bug. ***
Comment 7 Myriam Schweingruber 2012-08-08 20:38:41 UTC
*** Bug 304749 has been marked as a duplicate of this bug. ***