Use proper color in "Dynamic Playlist" notification strip

...it was not using style's link colour, from QPalette documentation:
> Note that we do not use the Link and LinkVisited roles when rendering
> rich text in Qt, and that we recommend that you use CSS

I didn't know this.

This should fix low-contrast problem with Obsidian Coast color scheme
and the like. It is still not optimal, but that would require
rethinking PaletteHandler::highlightColor().

BUG: 301303
FIXED-IN: 2.6